@@ -87,6 +87,8 @@
 
 #undef NO_NAKED_POINTERS
 
+#undef NAKED_POINTERS_CHECKER
+
 #undef WITH_PROFINFO
 
 #undef CAML_WITH_FPIC
