@@ -1,0 +1,3 @@
+#!/bin/sh
+
+exec ${test_source_directory}/runtest.sh
